--- a/index.html
+++ b/index.html
@@ -5,10 +5,11 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
 
     <script src="./router.js" defer></script>
     <script src="./script.js" defer></script>
-    <script src="./firebase.js" type="module"></script>
+<!--    <script src="./firebase.js" type="module"></script>-->
     <title>Nannies For You</title>
 </head>
 
@@ -17,6 +18,7 @@
     <header>
         <a href="#home">Home</a>
         <a href="#about">About</a>
+        <a href="#signup">SignUp</a>
     </header>
     <main>
         <div id="main-area"></div>
