Fix: Firestore Configurations

--- a/app/About.html
+++ b/app/About.html
@@ -1,31 +1,3 @@
-<!-- <!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>About Us</title>
-    <link rel="stylesheet" href="about-style.css">
-    <link rel='stylesheet' href='https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css' integrity='sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g==' crossorigin='anonymous' referrerpolicy='no-referrer' />
-
-</head>
-<body>
-    <div class="about-us-page">
-        <header>
-            <h1>Lorem ipsum dolor, sit amet consectetur adipisicing elit.</h1>
-            <div class="site-logo"><img src="https://picsum.photos/800/200?rand=811" alt=""></div>
-            <nav class="header-menu">
-                <ul>
-                    <li><a href="#"></a>Lorem</li>
-                    <li><a href="#"></a>ipsum</li>
-                    <li><a href="#"></a>dolor</li>
-                    <li><a href="#"></a>sit</li>
-                    <li><a href="#"></a>amet</li>
-                </ul>
-            </nav>
-            <div class="banner-image"><img src="https://picsum.photos/800/200?rand=511" alt=""></div>
-        </header>
-        <main> -->
 <h2>About Us</h2>
 <p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error optio maiores at voluptatibus corrupti neque illo.
     Voluptate recusandae corrupti, quidem distinctio, nobis eveniet molestias pariatur amet similique est eos nostrum.
@@ -36,7 +8,7 @@
 
     <div class="team-article">
         <article>
-            <img src="img/Florida.jpg" alt="">
+<!--            <img src="./img/Florida.jpg" alt="">-->
             <h3>Florida Joca</h3>
             <p>Florida is our project manager. She's into acting and was almost cast as a lead in the Harry Potter
                 Series, but had to withdraw due to conflicting schedules.</p>
@@ -44,7 +16,7 @@
     </div>
     <div class="team-article">
         <article>
-            <img src="img/Javier.jpg" alt="">
+<!--            <img src="./img/Javier.jpg" alt="">-->
             <h3>Javier Perez</h3>
             <p>Javier is a cop who is working undercover as a student at Langara. For the record, we do not really know
                 that. And at present we don't have much details on him.</p>
@@ -52,7 +24,7 @@
     </div>
     <div class="team-article">
         <article>
-            <img src="img/Jasmeen.jpg" alt="">
+<!--            <img src="./img/Jasmeen.jpg" alt="">-->
             <h3>Jasmeen Verma</h3>
             <p>Jasmeen is an avid designer. He adores Leonardo Di Caprio and in his free time watches Di Caprio's movies
                 on a loop. He believes global warming is real. Haha!</p>
@@ -60,7 +32,7 @@
     </div>
     <div class="team-article">
         <article>
-            <img src="img/Bihara.png" alt="">
+<!--            <img src="./img/Bihara.png" alt="">-->
             <h3>Bihara Gandhi</h3>
             <p>Bihara is a time traveler. His sole responsibility is to edit wikipedia pages on history and correct them
                 (as he saw them), to provide accurate information to our future generation.</p>
@@ -68,7 +40,7 @@
     </div>
     <div class="team-article">
         <article>
-            <img src="img/Maria.png" alt="">
+<!--            <img src="./img/Maria.png" alt="">-->
             <h3>Maria Garcia Barradas</h3>
             <p>Maria likes traveling and Singing. She also practices equestrian. She prefers to travel on horseback and
                 do her bit to reduce pollution.</p>
@@ -76,7 +48,7 @@
     </div>
     <div class="team-article">
         <article>
-            <img src="img/Akshee.jpg" alt="">
+<!--            <img src="./img/Akshee.jpg" alt="">-->
             <h3>Akshee Sharma</h3>
             <p>Akshee is a designer and loves dancing. On weekends she can be seen at Stanley Park feeding Brazil nuts
                 to Canadian Geese.</p>
@@ -84,7 +56,7 @@
     </div>
     <div class="team-article">
         <article>
-            <img src="img/Winall.jpg" alt="">
+<!--            <img src="./img/Winall.jpg" alt="">-->
             <h3>Winall Lopes</h3>
             <p>Life turned upside down when a cat adopted Winall. He now studies to unlearn, and travels to be at home.
                 Doesn't make sense. </p>
@@ -101,46 +73,3 @@
         <h4>Looking for a nanny for your child?</h4>
     </article>
 </div>
-<!-- </main>
-        <footer>
-            <div class="footer-section">
-                <div class="team-article">
-                    <article>
-                        <h3>About</h3>
-                        <ul>
-                            <li><a href="#">Lorem, ipsum.</a></li>
-                            <li><a href="#">Magni, in.</a></li>
-                </div>
-                        <li><a href="#">In, sit?</a></li>
-                        <li><a href="#">Porro, animi.</a></li>
-                    </ul>
-                </article>
-                <div class="team-article">
-                    <article>
-                        <h3>User</h3>
-                        <ul>
-                            <li><a href="#">Lorem, ipsum.</a></li>
-                            <li><a href="#">Voluptatibus, totam!</a></li>
-                </div>
-                        <li><a href="#">Laboriosam, esse!</a></li>
-                        <li><a href="#">Vero, cupiditate?</a></li>
-                    </ul>
-                </article>
-                <div class="team-article">
-                    <article>
-                        <h3>Social Links</h3>
-                        <ul>
-                            <li><a href="#">facebook</a></li>
-                            <li><a href="#">twitter</a></li>
-                </div>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">Pinterest</a></li>
-                    </ul>
-                </article>
-            </div>
-        </footer>
-    </div>
-
-
-</body>
-</html> -->
