--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
         <a href="#home">Home</a>
         <a href="#about">About</a>
         <a href="#signup">SignUp</a>
+        <a href="#parentjobpost">Job Posts</a>
     </header>
     <main>
         <div id="main-area"></div>
