Fix: Nanny Profile page and About page images

--- a/app/About.html
+++ b/app/About.html
@@ -1,6 +1,5 @@
 <h2>About Us</h2>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error optio maiores at voluptatibus corrupti neque illo.
-    Voluptate recusandae corrupti, quidem distinctio, nobis eveniet molestias pariatur amet similique est eos nostrum.
+<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error optio maiores at voluptatibus corrupti neque illo. Voluptate recusandae corrupti, quidem distinctio, nobis eveniet molestias pariatur amet similique est eos nostrum.
 </p>
 <img src="https://picsum.photos/800/200?rand=111" alt="">
 <h2>Team Members</h2>
@@ -8,58 +7,51 @@
 
     <div class="team-article">
         <article>
-<!--            <img src="./img/Florida.jpg" alt="">-->
+            <img src="app/img/Florida.jpg" alt="">
             <h3>Florida Joca</h3>
-            <p>Florida is our project manager. She's into acting and was almost cast as a lead in the Harry Potter
-                Series, but had to withdraw due to conflicting schedules.</p>
+            <p>Florida is our project manager. She's into acting and was almost cast as a lead in the Harry Potter Series, but had to withdraw due to conflicting schedules.</p>
         </article>
     </div>
     <div class="team-article">
         <article>
-<!--            <img src="./img/Javier.jpg" alt="">-->
+            <img src="app/img/Javier.jpg" alt="">
             <h3>Javier Perez</h3>
-            <p>Javier is a cop who is working undercover as a student at Langara. For the record, we do not really know
-                that. And at present we don't have much details on him.</p>
+            <p>Javier is a cop who is working undercover as a student at Langara. For the record, we do not really know that. And at present we don't have much details on him.</p>
         </article>
     </div>
     <div class="team-article">
         <article>
-<!--            <img src="./img/Jasmeen.jpg" alt="">-->
+            <img src="app/img/Jasmeen.jpg" alt="">
             <h3>Jasmeen Verma</h3>
-            <p>Jasmeen is an avid designer. He adores Leonardo Di Caprio and in his free time watches Di Caprio's movies
-                on a loop. He believes global warming is real. Haha!</p>
+            <p>Jasmeen is an avid designer. He adores Leonardo Di Caprio and in his free time watches Di Caprio's movies on a loop. He believes global warming is real. Haha!</p>
         </article>
     </div>
     <div class="team-article">
         <article>
-<!--            <img src="./img/Bihara.png" alt="">-->
+            <img src="app/img/Bihara.png" alt="">
             <h3>Bihara Gandhi</h3>
-            <p>Bihara is a time traveler. His sole responsibility is to edit wikipedia pages on history and correct them
-                (as he saw them), to provide accurate information to our future generation.</p>
+            <p>Bihara is a time traveler. His sole responsibility is to edit wikipedia pages on history and correct them (as he saw them), to provide accurate information to our future generation.</p>
         </article>
     </div>
     <div class="team-article">
         <article>
-<!--            <img src="./img/Maria.png" alt="">-->
+            <img src="app/img/Maria.png" alt="">
             <h3>Maria Garcia Barradas</h3>
-            <p>Maria likes traveling and Singing. She also practices equestrian. She prefers to travel on horseback and
-                do her bit to reduce pollution.</p>
+            <p>Maria likes traveling and Singing. She also practices equestrian. She prefers to travel on horseback and do her bit to reduce pollution.</p>
         </article>
     </div>
     <div class="team-article">
         <article>
-<!--            <img src="./img/Akshee.jpg" alt="">-->
+            <img src="app/img/Akshee.jpg" alt="">
             <h3>Akshee Sharma</h3>
-            <p>Akshee is a designer and loves dancing. On weekends she can be seen at Stanley Park feeding Brazil nuts
-                to Canadian Geese.</p>
+            <p>Akshee is a designer and loves dancing. On weekends she can be seen at Stanley Park feeding Brazil nuts to Canadian Geese.</p>
         </article>
     </div>
     <div class="team-article">
         <article>
-<!--            <img src="./img/Winall.jpg" alt="">-->
+            <img src="app/img/Winall.jpg" alt="">
             <h3>Winall Lopes</h3>
-            <p>Life turned upside down when a cat adopted Winall. He now studies to unlearn, and travels to be at home.
-                Doesn't make sense. </p>
+            <p>Life turned upside down when a cat adopted Winall. He now studies to unlearn, and travels to be at home. Doesn't make sense. </p>
         </article>
     </div>
 </div>
