--- a/app/NannyProfileDetails.html
+++ b/app/NannyProfileDetails.html
@@ -7,11 +7,11 @@
         <div class="userprofile-div">
             <img src="https://picsum.photos/700/600" alt="" class="nannyProfile-image">
             <div class="userinfo">
-                <p id="nannyName"></p>
+
                 <table id="table" class="table">
                     <tr>
                         <td>Name:</td>
-                        <!-- <td id="nannyName"></td> -->
+                        <td id="nannyName"></td>
 
                     </tr>
                     <!-- <tr>
