--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
 
 <body>
 
-    <!-- <header>
-        <a href="#home">Home</a>
-        <a href="#about">About</a>
-        <a href="#signup">SignUp</a>
-        <a href="#parentjobpost">Job Posts</a>
-    </header> -->
+
+    <a href="#home">Home</a>
+    <a href="#about">About</a>
+    <a href="#signup">SignUp</a>
+    <a href="#parentjobpost">Job Posts</a>
+    <a href="#nannyprofiledetails">profile details</a>
+
+
     <header class="main-header">
         <p class="main-tagline">Lorem ipsum is the simply test for printing</p>
 
