--- a/app/ParentJobPost.html
+++ b/app/ParentJobPost.html
@@ -15,7 +15,15 @@
                         </div>
                         <div class="schedule-display">
                             <h4>When:</h4>
-                            <p id="scheduleOutput"></p>
+                            <ul id="scheduleOutput" class="schedule-display-list">
+                                <li id="sunday">S</li>
+                                <li id="monday">M</li>
+                                <li id="tuesday">T</li>
+                                <li id="wednesday">W</li>
+                                <li id="thursday">T</li>
+                                <li id="friday">F</li>
+                                <li id="saturday">S</li>
+                            </ul>
                         </div>
                         <div class="start-date-display">
                             <h4>Start Date:</h4>
