--- a/index.html
+++ b/index.html
@@ -19,6 +19,7 @@
 
 
     <a href="#home">Home</a>
+    <a href="#login">Login</a>
     <a href="#about">About</a>
     <a href="#signup">SignUp</a>
     <a href="#parentjobpost">Job Posts</a>
