--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
 
 
     <a href="#home">Home</a>
+    <a href="#login">Login</a>
     <a href="#about">About</a>
     <a href="#signup">SignUp</a>
     <a href="#parentjobpost">Job Posts</a>
