Fix: User registration with firebase

--- a/app/SignUp.html
+++ b/app/SignUp.html
@@ -12,7 +12,7 @@
         <input type="text" id="fname" placeholder="Full Name" aria-placeholder="Full Name" required>
         <input type="email" id="email" placeholder="Email" aria-placeholder="email" required>
         <input type="tel" name="phone number" id="phone number" aria-placeholder="phone-number"
-            placeholder="Phone number" required>
+            placeholder="Phone number">
         <input type="password" name="password" id="password" placeholder="Password" aria-placeholder="Password"
             required>
         <input type="password" name="confirm password" id="confirm password" placeholder="Confirm Password"
@@ -23,8 +23,8 @@
         <input type="text" placeholder="State" id="state" aria-placeholder="State/Province">
         <input type="text" placeholder="Country" id="country" aria-placeholder="country">
         <button id="register">Register</button>
+        <p id="error-output"></p>
     </form>
     <hr>
-
     <p class="login-text">Already have an account? <a href="#login" class="login-here-text">Login Here</a></p>
 </div>
