Fix: Provide a default value on the radio button.

--- a/app/SignUp.html
+++ b/app/SignUp.html
@@ -3,11 +3,11 @@
     <form action="" method="post" id="sign-up-form">
         <div class="radio-btn">
             <label for="parent">Register as a parent</label>
-            <input type="radio" name="user type" id="parent" value="Parent">
+            <input type="radio" name="user type" id="parent" value="Parent" checked>
         </div>
         <div class="radio-btn">
             <label for="nanny">Register as a nanny</label>
-            <input type="radio" name="user type" id="nanny" value="Nanny">
+            <input type="radio" name="user type" id="nanny" value="Nanny" >
         </div>
         <input type="text" id="fname" placeholder="Full Name" aria-placeholder="Full Name" required>
         <input type="email" id="email" placeholder="Email" aria-placeholder="email" required>
