Fix:Nanny profile list

--- a/index.html
+++ b/index.html
@@ -24,6 +24,8 @@
     <a href="#signup">SignUp</a>
     <a href="#parentjobpost">Job Posts</a>
     <a href="#nannyprofiledetails">profile details</a>
+    <a href="#nannyprofilelist"> nanny profile list</a>
+
 
 
     <header class="main-header">
