Login related validation

--- a/index.html
+++ b/index.html
@@ -11,21 +11,21 @@
         crossorigin='anonymous' referrerpolicy='no-referrer' />
     <script src="firebase.js" type="module" defer></script>
     <script src="router.js" defer></script>
-    <script src="script.js" defer></script>
+    <script src="script.js" type="module" defer></script>
 
     <title>Nannies For You</title>
 </head>
 
 <body>
 
-
-    <a href="#home">Home</a>
-    <a href="#login">Login</a>
-    <a href="#about">About</a>
-    <a href="#signup">SignUp</a>
-    <a href="#parentjobpost">Job Posts</a>
-    <a href="#nannyprofiledetails">profile details</a>
-
+<div class="site-links" id="main-site-links">
+        <a href="#home">Home</a>
+        <a href="#login">Login</a>
+        <a href="#about">About</a>
+        <a href="#signup">SignUp</a>
+        <a href="#parentjobpost">Job Posts</a>
+        <a href="#nannyprofiledetails">profile details</a>
+</div>
 
     <header class="main-header">
         <p class="main-tagline">Lorem ipsum is the simply test for printing</p>
