--- a/app/Login.html
+++ b/app/Login.html
@@ -2,14 +2,15 @@
     
     <div class="login-container">
         <div class="login-class">
+            <div class="signout-message" id="signout-msg"></div>
             <h2>Login</h2>
-            <form action="" method="" id="login-form">
-                <input type="text" placeholder="Email" name="email" id="email1" autocomplete="off" required>
-                <input type="password" placeholder="Password" name="psw" id="password1" autocomplete="off" required>
+            <form action="" method="post" id="login-form">
+                <input type="text" placeholder="Email" name="email" id="email" autocomplete="off" required>
+                <input type="password" placeholder="Password" name="psw" id="password" autocomplete="off" required>
                 <a href="#"  class="psw">Forgot your password?</a>
                 <button type="submit" id="login-button">Login</button>
             </form>
         </div>
-        <p class="register">Don't have an account? <a href="#signup" >Register here</a></p>
+        <p class="register">Don't have an account? <a href="#signup">Register here</a></p>
     </div>
 </main>
