--- a/app/NannyProfileDetails.html
+++ b/app/NannyProfileDetails.html
@@ -46,7 +46,7 @@
         </div>
         <div class="description">
             <p class="head-p">Description</p>
-            <p class="description-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est quos ullam labore incidunt a soluta voluptas porro. Atque labore distinctio quia unde maxime dolorum magnam fuga quibusdam, autem dolor debitis.</p>
+            <p id="nannyDescription" class="description-para">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Est quos ullam labore incidunt a soluta voluptas porro. Atque labore distinctio quia unde maxime dolorum magnam fuga quibusdam, autem dolor debitis.</p>
         </div>
         <div class="buttons">
             <button class="button">
@@ -78,7 +78,7 @@
                 <input id="payRate" type="text">
                 <!-- <p id="payRate" style="display:inline-block;"> </p> -->
             </div>
-            <div>
+            <!-- <div>
                 <label for="">GST Tax 5%</label>
                 <input id="tax_5" type="text" disabled>
 
@@ -87,7 +87,7 @@
                 <label for="">GST Tax 7%</label>
                 <input id="tax_7" type="text" disabled>
 
-            </div>
+            </div> -->
             <button id="calculate" class="calculate" type="submit">Calculate</button>
             <div>
                 <label for="">Total</label>
@@ -132,7 +132,8 @@
         </div>
     </div>
     <div class="map">
-        <iframe class="iframe-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2605.7233879192127!2d-123.1107382843485!3d49.22477278279311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486746f412563f7%3A0x36606d221509fdfe!2sLangara%20College!5e0!3m2!1sen!2sca!4v1655774330484!5m2!1sen!2sca"
+        <iframe id="map" class="iframe-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2605.7233879192127!2d-123.1107382843485!3d49.22477278279311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486746f412563f7%3A0x36606d221509fdfe!2sLangara%20College!5e0!3m2!1sen!2sca!4v1655774330484!5m2!1sen!2sca"
             width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
     </div>
+    <!-- <div id="map"></div> -->
 </main>
