--- a/index.html
+++ b/index.html
@@ -18,16 +18,15 @@
 
 <body>
 
-
-    <a href="#home">Home</a>
-    <a href="#login">Login</a>
-    <a href="#about">About</a>
-    <a href="#signup">SignUp</a>
-    <a href="#parentjobpost">Job Posts</a>
-    <a href="#nannyprofiledetails">profile details</a>
-    <a href="#nannyprofilelist"> nanny profile list</a>
-
-
+    <div class="site-links" id="main-site-links">
+        <a href="#home">Home</a>
+        <a href="#login">Login</a>
+        <a href="#about">About</a>
+        <a href="#signup">SignUp</a>
+        <a href="#parentjobpost">Job Posts</a>
+        <a href="#nannyprofiledetails">profile details</a>
+        <a href="#nannyprofilelist"> nanny profile list</a>
+    </div>
 
     <header class="main-header">
         <p class="main-tagline">Lorem ipsum is the simply test for printing</p>
