Fix:User Settings

--- a/index.html
+++ b/index.html
@@ -25,8 +25,7 @@
     <a href="#parentjobpost">Job Posts</a>
     <a href="#nannyprofiledetails">profile details</a>
     <a href="#nannyprofilelist"> nanny profile list</a>
-
-
+    <a href="#usersettings">User Settings</a>
 
     <header class="main-header">
         <p class="main-tagline">Lorem ipsum is the simply test for printing</p>
@@ -78,7 +77,6 @@
 
     <main>
         <div id="main-area"></div>
-
     </main>
 
 
