--- a/app/Home.html
+++ b/app/Home.html
@@ -1,4 +1,6 @@
 <main class="main-sections">
+
+
     <div class="first-section">
         <p class="first-section-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iusto labore harum!</p>
         <form class="search-form">
@@ -7,35 +9,85 @@
         </form>
         <div class="main-button-radio">
             <div class="radio-button">
-                <input type="radio" class="inputButton">
-                <label for="" class="InputLabel">Search Job as Nanny</label>
+                <input type="radio" class="inputButton" id="job" name="fav">
+                <label for="job" class="InputLabel">Search Job as Nanny</label>
             </div>
             <div class="radio-button">
-                <input type="radio" class="inputButton">
-                <label for="" class="InputLabel">Search Nanny</label>
+                <input type="radio" class="inputButton" id="nanny" name="fav">
+                <label for="nanny" class="InputLabel">Search Nanny</label>
             </div>
         </div>
     </div>
+
+
     <div class="second-section">
-        <div class="second-section-div">
-            <div class="img-div">
-                <img src="https://picsum.photos/id/1011/700/300" alt="" class="front-image">
+
+        <div class="main-container">
+            <div class="small-div-network">
+                <img src="app/img/networkingnetworking.svg" alt="" class="icon-img">
             </div>
+            <p class="network-heading">Join the Network</p>
         </div>
-        <h2 class="main-heading">Join the Network </h2>
+        <div class="main-container">
+            <div class="small-div-nanny">
+                <img src="app/img/mothernanny.svg" alt="" class="icon-img">
+            </div>
+            <p class="network-heading">Find a Nanny</p>
+        </div>
+        <div class="main-container">
+            <div class="small-div-date">
+                <img src="app/img/calendarcalender.svg" alt="" class="icon-img">
+            </div>
+            <p class="network-heading">Lock a Date</p>
+        </div>
+        <div class="main-container">
+            <div class="small-div-mind">
+                <img src="app/img/relaxmind.svg" alt="" class="icon-img">
+            </div>
+            <p class="network-heading">Peace of Mind</p>
+        </div>
+
+
+
+
     </div>
     <div class="third-section">
-        <div class="profile-div">
-            <img src="https://picsum.photos/700/600" alt="profile-image" class="profile-image">
-            <p class="desc-para">
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Error eius dolorem unde.
-                <span class="author">Lorem, ipsum.</span>
-            </p>
+
+        <div class="third-section-main">
+            <div class="review-main">
+                <img src="app/img/p1.png" alt="" class="review-img">
+                <div class="para-name">
+                    <p class="review-para">" Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde accusamus repudiandae inventore! "</p>
+                    <p class="review-name">USERNAME</p>
+                </div>
+            </div>
+            <div class="review-main">
+                <img src="app/img/p2.png" alt="" class="review-img">
+                <div class="para-name">
+                    <p class="review-para">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis officiis fugiat numquam! "</p>
+                    <p class="review-name">USERNAME</p>
+                </div>
+            </div>
+            <div class="review-main">
+                <img src="app/img/p3.png" alt="" class="review-img">
+                <div class="para-name">
+                    <p class="review-para">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, accusantium? Aspernatur, aliquam! "</p>
+                    <p class="review-name">USERNAME</p>
+                </div>
+            </div>
+
         </div>
+        <div class="dots" style="text-align:center">
+            <span class="dot"></span>
+            <span class="dot"></span>
+            <span class="dot"></span>
+        </div>
+
+
     </div>
     <div class="fourth-section">
         <div class="section-4-div">
-            <img src="https://picsum.photos/700/600" alt="" class="image-4">
+            <img src="app/img/jobnanny.png" alt="" class="image-4">
             <div class="content-div">
                 <h3 class="heading-4">Finding a job as Nanny</h3>
                 <p class="para-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla natus voluptate alias recusandae iusto, neque laboriosam culpa aperiam fugit ullam at maiores?</p>
@@ -45,7 +97,7 @@
             </div>
         </div>
         <div class="section-4-div">
-            <img src="https://picsum.photos/700/600" alt="" class="image-4">
+            <img src="app/img/childcare.png" alt="" class="image-4">
             <div class="content-div">
                 <h3 class="heading-4">Childcare Services</h3>
                 <p class="para-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla natus voluptate alias recusandae iusto, neque laboriosam culpa aperiam fugit ullam at maiores?</p>
@@ -53,27 +105,35 @@
                     <a href="" class="link-4">Learn More</a>
                 </p>
             </div>
+
         </div>
     </div>
     <div class="fifth-section">
-        <div class="fifth-main-div">
-            <h2 class="fifth-heading">Featured Profiles</h2>
+
+
+        <h3 class="fifth-heading">Featured Profiles</h3>
+
+        <div class="main-fifth">
             <div class="feature-profile-div">
                 <img src="https://picsum.photos/id/1001/700/300" alt="" class="featured-profile-img">
                 <h3 class="featured-profile-heading">John Deo</h3>
-                <p class="featured-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, enim!</p>
+                <p class="featured-para">location</p>
+                <p class="featured-para">pay</p>
             </div>
             <div class="feature-profile-div">
                 <img src="https://picsum.photos/id/5/700/300" alt="" class="featured-profile-img">
                 <h3 class="featured-profile-heading">John Deo</h3>
-                <p class="featured-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, enim!</p>
+                <p class="featured-para">location</p>
+                <p class="featured-para">pay</p>
             </div>
             <div class="feature-profile-div">
                 <img src="https://picsum.photos/id/1003/700/300" alt="" class="featured-profile-img">
                 <h3 class="featured-profile-heading">John Deo</h3>
-                <p class="featured-para">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla, enim!</p>
+                <p class="featured-para">location</p>
+                <p class="featured-para">pay</p>
             </div>
         </div>
+
     </div>
     <div class="sixth-section">
         <p class="first-section-para">Lorem ipsum dolor sit amet consectetur adipisicing elit. Pariatur iusto labore harum!</p>
@@ -83,13 +143,14 @@
         </form>
         <div class="main-button-radio">
             <div class="radio-button">
-                <input type="radio" class="inputButton">
-                <label for="" class="InputLabel">Search Job as Nanny</label>
+                <input type="radio" class="inputButton" id="job" name="fav">
+                <label for="job" class="InputLabel">Search Job as Nanny</label>
             </div>
             <div class="radio-button">
-                <input type="radio" class="inputButton">
-                <label for="" class="InputLabel">Search Nanny</label>
+                <input type="radio" class="inputButton" id="nanny" name="fav">
+                <label for="nanny" class="InputLabel">Search Nanny</label>
             </div>
         </div>
+
     </div>
 </main>
