--- a/app/NannyProfileDetails.html
+++ b/app/NannyProfileDetails.html
@@ -8,8 +8,9 @@
 
         <p id="nanny-availability">Availability: </p>
         <p id="nanny-reviews">Reviews: </p>
-        <p id="nanny-description">Description </p>
-        <button id="contact-info"> Contact Info </button>
+        <p id="nanny-description">Description: </p>
+        <button id="contactBtn"> Contact Info: </button>
+        <div class="contact-info"></div>
     </div>
     <div class="calculation">
         <h2>Pay Calculation</h2>
@@ -20,15 +21,11 @@
             <input type="number" name="period" id="period" placeholder="Period">
             <label for="rate">Pay rate</label>
             <input type="number" name="rate" id="rate" placeholder="Pay rate">
-            <button type="submit">Calculate</button>
+            <button id="calcBtn" type="submit">Calculate</button>
         </form>
     </div>
 
     <div class="nearby-nannies">
 
     </div>
-<!--    <div class="map">-->
-<!--        <iframe id="map" class="iframe-map" src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d2605.7233879192127!2d-123.1107382843485!3d49.22477278279311!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x5486746f412563f7%3A0x36606d221509fdfe!2sLangara%20College!5e0!3m2!1sen!2sca!4v1655774330484!5m2!1sen!2sca"-->
-<!--                width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>-->
-<!--    </div>-->
 </main>
