Fix: Add City property as required and add ratings value to 0 in sign up

--- a/app/SignUp.html
+++ b/app/SignUp.html
@@ -19,8 +19,8 @@
             aria-placeholder="Confirm Password" required>
         <input type="text" placeholder="Address Line" id="address" aria-placeholder="address">
         <input type="text" placeholder="Zip Code" id="zip-code" aria-placeholder="Zip Code" required>
-        <input type="text" placeholder="City" id="city" aria-placeholder="City">
-        <input type="text" placeholder="State" id="state" aria-placeholder="State/Province">
+        <input type="text" placeholder="City" id="city" aria-placeholder="City" required>
+        <input type="text" placeholder="State/Province" id="state" aria-placeholder="State/Province">
         <input type="text" placeholder="Country" id="country" aria-placeholder="country">
         <button id="register">Register</button>
         <p id="error-output"></p>
