--- a/app/About.html
+++ b/app/About.html
@@ -1,7 +1,12 @@
 <h2>About Us</h2>
-<p>Lorem ipsum dolor sit, amet consectetur adipisicing elit. Error optio maiores at voluptatibus corrupti neque illo. Voluptate recusandae corrupti, quidem distinctio, nobis eveniet molestias pariatur amet similique est eos nostrum.
-</p>
-<img src="https://picsum.photos/800/200?rand=111" alt="">
+
+<img src="/app/site-images/aboutpage-top.png" alt="">
+<div class="about-section-wrapper">
+    <div class="about-section">
+        <p>Lorem, ipsum dolor sit amet consectetur adipisicing elit. At, maiores, minima vel dignissimos temporibus sint accusamus porro atque officiis amet beatae, incidunt vitae. Reiciendis odio doloribus porro omnis rerum, cumque necessitatibus deserunt asperiores nesciunt! Nam ullam quas repudiandae cum mollitia iure dicta pariatur at odio aut. Cum, sit excepturi, assumenda consequuntur reiciendis natus vel dolorum, ullam illum facilis rem deserunt autem fuga! Veritatis repudiandae natus aut in aperiam fuga. Pariatur ut dignissimos debitis ex molestiae illo voluptates. Dignissimos, atque qui.</p>
+        <div class="img-container"><img src="/app/site-images/aboutpage-about-us.png" alt=""></div>
+    </div>
+</div>
 <h2>Team Members</h2>
 <div class="team-header">
 
