--- a/app/NannyProfileList.html
+++ b/app/NannyProfileList.html
@@ -1,3 +1,9 @@
-<div class="nanny-profile-list-wrapper">
+<div class="nanny-profile-list-page">
+    <div class="top-img">
+        <!-- <img src="/app/site-images/nanny-profile-list-top.png"> -->
+    
+    </div>
+    <div class="nanny-profile-list-wrapper">
+    </div>
 </div>
 <div id="map-div"></div>
