--- a/app/ParentJobDetails.html
+++ b/app/ParentJobDetails.html
@@ -1,8 +1,11 @@
+<div class="top-img">
+    <img src="/app/site-images/parent-profile-details-top.png">
 
+</div>
 <div class="job-details-container">
     <div class="job-details-main">
         <h2>Job Details</h2>
-        <img src="https://picsum.photos/800/200?rand=111" alt="">
+        <img src="" id="jobDetailsImg" alt="">
         <div class="job-post-details">
             <div class="reviews-display">
                 <ul id="reviewsDisplay">
