--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
 
 <body>
 
-    <div class="site-links" id="main-site-links">
+    <!-- <div class="site-links" id="main-site-links">
         <a href="#home">Home</a>
         <a href="#login">Login</a>
         <a href="#about">About</a>
@@ -45,7 +45,7 @@
         <a href="#nannyprofiledetails">profile details</a>
         <a href="#nannyprofilelist"> nanny profile list</a>
         <a href="#usersettings">User Settings</a>
-    </div>
+    </div> -->
 
     <header class="main-header">
         <p class="main-tagline">Lorem ipsum is the simply test for printing</p>
@@ -65,16 +65,17 @@
             </div>
 
             <div class="dropdown" id="mytopnav">
-                <div class="header-menu">
-                    <ul class="menu-ul">
-                        <li class="ul-li-header"><a href="#" class="link-header">Home</a></li>
-                        <li class="ul-li-header"><a href="#" class="link-header">About</a></li>
-                        <li class="ul-li-header"><a href="#" class="link-header">How it works</a></li>
-                        <li class="ul-li-header"><a href="#" class="link-header">Profile</a></li>
-                        <li class="ul-li-header"><a href="#" class="link-header">Login/Signup</a></li>
-
-                    </ul>
-                </div>
+                    <div class="site-links-top">
+                        <ul class="site-links" id="main-site-links"></ul>
+                    <!-- <a href="#home">Home</a>
+                    <a href="#login">Login</a>
+                    <a href="#about">About</a>
+                    <a href="#signup">SignUp</a>
+                    <a href="#parentjobpost">Job Posts</a>
+                    <a href="#nannyprofiledetails">profile details</a>
+                    <a href="#nannyprofilelist"> nanny profile list</a>
+                    <a href="#usersettings">User Settings</a> -->
+                    </div>
                 <div class="social-div-header">
                     <ul class="social-header">
                         <li class="li-social-header"><a href="#" class="link-social-header"><i
