--- a/app/ParentProfileList.html
+++ b/app/ParentProfileList.html
@@ -1,4 +1,9 @@
+<div class="top-img">
+    <img src="/app/site-images/parent-profile-list-top.png">
+
+</div>
 <div class="parent-profile-list-main">
+
     <div class="parent-profile-list-wrapper">
     </div>
 </div>
