--- a/app/Home.html
+++ b/app/Home.html
@@ -52,37 +52,49 @@
 
     </div>
     <div class="third-section">
-
-        <div class="third-section-main">
-            <div class="review-main">
-                <img src="app/img/p1.png" alt="" class="review-img">
-                <div class="para-name">
-                    <p class="review-para">" Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde accusamus repudiandae inventore! "</p>
-                    <p class="review-name">USERNAME</p>
+        <section class="product">
+            <!-- <button class="pre-btn"><img src="images/arrow.png" alt=""></button>
+            <button class="nxt-btn"><img src="images/arrow.png" alt=""></button> -->
+            <div class="product-container">
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="app/img/p1.png" alt="" class="review-img">
+                        <div class="para-name">
+                            <p class="review-para">" Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde accusamus repudiandae inventore! "</p>
+                            <p class="review-name">Mary Augustine</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="review-main">
-                <img src="app/img/p2.png" alt="" class="review-img">
-                <div class="para-name">
-                    <p class="review-para">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Veritatis officiis fugiat numquam! "</p>
-                    <p class="review-name">USERNAME</p>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="app/img/p2.png" alt="" class="review-img">
+                        <div class="para-name">
+                            <p class="review-para">" Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde accusamus repudiandae inventore! "</p>
+                            <p class="review-name">Mary Jane Watson</p>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="review-main">
-                <img src="app/img/p3.png" alt="" class="review-img">
-                <div class="para-name">
-                    <p class="review-para">"Lorem ipsum, dolor sit amet consectetur adipisicing elit. Fugiat, accusantium? Aspernatur, aliquam! "</p>
-                    <p class="review-name">USERNAME</p>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="app/img/p3.png" alt="" class="review-img">
+                        <div class="para-name">
+                            <p class="review-para">" Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde accusamus repudiandae inventore! "</p>
+                            <p class="review-name">Akshee Warma</p>
+                        </div>
+                    </div>
                 </div>
+                <div class="product-card">
+                    <div class="product-image">
+                        <img src="app/img/p1.png" alt="" class="review-img">
+                        <div class="para-name">
+                            <p class="review-para">" Lorem, ipsum dolor sit amet consectetur adipisicing elit. Unde accusamus repudiandae inventore! "</p>
+                            <p class="review-name">Maria Burgos</p>
+                        </div>
+                    </div>
+                </div>
+
             </div>
-
-        </div>
-        <div class="dots" style="text-align:center">
-            <span class="dot"></span>
-            <span class="dot"></span>
-            <span class="dot"></span>
-        </div>
-
+        </section>
 
     </div>
     <div class="fourth-section">
@@ -90,7 +102,8 @@
             <img src="app/img/jobnanny.png" alt="" class="image-4">
             <div class="content-div">
                 <h3 class="heading-4">Finding a job as Nanny</h3>
-                <p class="para-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla natus voluptate alias recusandae iusto, neque laboriosam culpa aperiam fugit ullam at maiores?</p>
+                <p class="para-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                    book. It has survived not only five centuries</p>
                 <p class="para-4-link">
                     <a href="" class="link-4">Learn More</a>
                 </p>
@@ -100,7 +113,8 @@
             <img src="app/img/childcare.png" alt="" class="image-4">
             <div class="content-div">
                 <h3 class="heading-4">Childcare Services</h3>
-                <p class="para-4">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Nulla natus voluptate alias recusandae iusto, neque laboriosam culpa aperiam fugit ullam at maiores?</p>
+                <p class="para-4">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry's standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen
+                    book. It has survived not only five centuries</p>
                 <p class="para-4-link">
                     <a href="" class="link-4">Learn More</a>
                 </p>
@@ -114,24 +128,53 @@
         <h3 class="fifth-heading">Featured Profiles</h3>
 
         <div class="main-fifth">
-            <div class="feature-profile-div">
-                <img src="https://picsum.photos/id/1001/700/300" alt="" class="featured-profile-img">
-                <h3 class="featured-profile-heading">John Deo</h3>
-                <p class="featured-para">location</p>
-                <p class="featured-para">pay</p>
-            </div>
-            <div class="feature-profile-div">
-                <img src="https://picsum.photos/id/5/700/300" alt="" class="featured-profile-img">
-                <h3 class="featured-profile-heading">John Deo</h3>
-                <p class="featured-para">location</p>
-                <p class="featured-para">pay</p>
-            </div>
-            <div class="feature-profile-div">
-                <img src="https://picsum.photos/id/1003/700/300" alt="" class="featured-profile-img">
-                <h3 class="featured-profile-heading">John Deo</h3>
-                <p class="featured-para">location</p>
-                <p class="featured-para">pay</p>
-            </div>
+            <section class="product ">
+
+                <div class="product-containerr">
+                    <div class="product-card">
+                        <div class="product-imagee">
+                            <div class="feature-profile-div">
+                                <img src="app/img/fetaure1.png" alt="" class="featured-profile-img">
+                                <h3 class="featured-profile-heading">Florida Roca</h3>
+                                <p class="featured-para">West Vancouver</p>
+                                <p class="featured-para">$34</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-imagee">
+                            <div class="feature-profile-div">
+                                <img src="app/img/fetaure2.png" alt="" class="featured-profile-img">
+                                <h3 class="featured-profile-heading">Ferry Rivera</h3>
+                                <p class="featured-para">Vancouver</p>
+                                <p class="featured-para">$23</p>
+                            </div>
+
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-imagee">
+                            <div class="feature-profile-div">
+                                <img src="app/img/feature3.png" alt="" class="featured-profile-img">
+                                <h3 class="featured-profile-heading">Jojo Shelvy</h3>
+                                <p class="featured-para">Vancouver</p>
+                                <p class="featured-para">$32</p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="product-card">
+                        <div class="product-imagee">
+                            <div class="feature-profile-div">
+                                <img src="app/img/fetaure1.png" alt="" class="featured-profile-img">
+                                <h3 class="featured-profile-heading">Terry Borba</h3>
+                                <p class="featured-para">Vancouver</p>
+                                <p class="featured-para">$31</p>
+                            </div>
+                        </div>
+                    </div>
+
+                </div>
+            </section>
         </div>
 
     </div>
